# mini-jira-be

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
apps/analytics/: serializers.py  urls.py  views.py
apps/projects/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/projects/management/commands/: seed.py
apps/projects/migrations/: 0001_initial.py
apps/tasks/: models.py  serializers.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_task_is_archived.py  0003_alter_task_assigned_to.py
apps/users/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_auto_20250626_0706.py  0003_auto_20250626_0737.py
config/: settings.py  urls.py
