[project]
name = "mini-jira-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.8.1",
    "boto3>=1.38.46",
    "django-cors-headers>=4.7.0",
    "django-storages>=1.14.6",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlparse>=0.5.3",
    "uvicorn>=0.35.0",
]
